# amplify.ai_1

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml
api/: pyproject.toml  requirements.txt
api/src/discovery/: __init__.py  config.py  main.py
api/src/discovery/routes/: __init__.py  health.py
api/tests/: __init__.py  test_health.py  test_project_structure.py
backend/app/: __init__.py
backend/app/models/: __init__.py  base.py
backend/migrations/versions/: 070_discovery_onet_tables.py  071_discovery_session_tables.py  072_discovery_memory_tables.py  073_discovery_gwa_seed.py
discovery/: .dockerignore  .env.example  CODE_REVIEW_REPORT.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
discovery/app/: __init__.py  config.py  dependencies.py  enums.py  exceptions.py  main.py
discovery/app/agents/: __init__.py  activity_agent.py  analysis_agent.py  (+9 more)
discovery/docs/: backend-workflow-overview.md
discovery/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
discovery/migrations/: env.py
discovery/scripts/: init_db.py  seed_data.py  start_dev.sh
discovery/test_data/: workforce_roles.csv
discovery/tests/: __init__.py  conftest.py
docker/localstack/: init-s3.sh
docker/postgres/: 01-create-extensions.sql  02-init.sql
docs/: frontend-design-principles.md  implementation-tracking.md
tests/: test_compose_config.sh  test_docker_build.sh  test_full_stack.sh  test_localstack_s3.sh  test_postgres_init.sh
tests/e2e/: conftest.py  mock_api_server.py  test_happy_path_discovery.py  test_unhappy_path_malformed_csv.py  test_unhappy_path_unmappable_roles.py
(+401 files in other folders)
